docs/envoy/v1.34.14/_sources/api-v3/extensions/filters/network/ext_proc/v3/ext_proc.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/network/ext_proc/v3/ext_proc.proto:

External Processing Filter (proto)
==================================

.. _extension_envoy.filters.network.ext_proc:

This extension has the qualified name ``envoy.filters.network.ext_proc``


.. note::
  This extension is work-in-progress. Functionality is incomplete and it is not intended for production use.

  This extension has an unknown security posture and should only be
  used in deployments where both the downstream and upstream are
  trusted.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.filters.network <extension_category_envoy.filters.network>`



  This extension must be configured with one of the following type URLs:



  - :ref:`type.googleapis.com/envoy.extensions.filters.network.ext_proc.v3.NetworkExternalProcessor <envoy_v3_api_msg_extensions.filters.network.ext_proc.v3.NetworkExternalProcessor>`



.. warning::
   This API feature is currently work-in-progress. API features marked as work-in-progress are not considered stable, are not covered by the :ref:`threat model <arch_overview_threat_model>`, are not supported by the security team, and are subject to breaking changes. Do not use this feature without understanding each of the previous points.



External Processing Filter: Process network traffic using an external service.




.. _envoy_v3_api_msg_extensions.filters.network.ext_proc.v3.NetworkExternalProcessor:

extensions.filters.network.ext_proc.v3.NetworkExternalProcessor
---------------------------------------------------------------


:repo:`[extensions.filters.network.ext_proc.v3.NetworkExternalProcessor proto] <api/envoy/extensions/filters/network/ext_proc/v3/ext_proc.proto#L35>`

The Network External Processing filter allows an external service to process raw TCP/UDP traffic
in a flexible way using a bidirectional gRPC stream. Unlike the HTTP External Processing filter,
this filter operates at the L4 (transport) layer, giving access to raw network traffic.

The filter communicates with an external gRPC service that can:
* Inspect traffic in both directions
* Modify the network traffic
* Control connection lifecycle (continue, close, or reset)

By using the filter's processing mode, you can selectively choose which data
directions to process (read, write or both), allowing for efficient processing.



.. code-block:: json
  :force:

  {
    "grpc_service": {...}
  }

.. _envoy_v3_api_field_extensions.filters.network.ext_proc.v3.NetworkExternalProcessor.grpc_service:


grpc_service
  (:ref:`config.core.v3.GrpcService <envoy_v3_api_msg_config.core.v3.GrpcService>`) The gRPC service that will process network traffic.
  This service must implement the NetworkExternalProcessor service
  defined in the proto file /envoy/service/network_ext_proc/v3/external_processor.proto.



.. _envoy_v3_api_msg_extensions.filters.network.ext_proc.v3.ProcessingMode:

extensions.filters.network.ext_proc.v3.ProcessingMode
-----------------------------------------------------


:repo:`[extensions.filters.network.ext_proc.v3.ProcessingMode proto] <api/envoy/extensions/filters/network/ext_proc/v3/ext_proc.proto#L66>`

Options for controlling processing behavior.
Filter will reject the config if both read and write are SKIP mode.



.. code-block:: json
  :force:

  {
    "process_read": ...,
    "process_write": ...
  }

.. _envoy_v3_api_field_extensions.filters.network.ext_proc.v3.ProcessingMode.process_read:


process_read
  (:ref:`extensions.filters.network.ext_proc.v3.ProcessingMode.DataSendMode <envoy_v3_api_enum_extensions.filters.network.ext_proc.v3.ProcessingMode.DataSendMode>`) Controls whether inbound (read) data from the client is sent to the external processor.
  Default: STREAMED


.. _envoy_v3_api_field_extensions.filters.network.ext_proc.v3.ProcessingMode.process_write:


process_write
  (:ref:`extensions.filters.network.ext_proc.v3.ProcessingMode.DataSendMode <envoy_v3_api_enum_extensions.filters.network.ext_proc.v3.ProcessingMode.DataSendMode>`) Controls whether outbound (write) data to the client is sent to the external processor.
  Default: STREAMED


.. _envoy_v3_api_enum_extensions.filters.network.ext_proc.v3.ProcessingMode.DataSendMode:

Enum extensions.filters.network.ext_proc.v3.ProcessingMode.DataSendMode
-----------------------------------------------------------------------


:repo:`[extensions.filters.network.ext_proc.v3.ProcessingMode.DataSendMode proto] <api/envoy/extensions/filters/network/ext_proc/v3/ext_proc.proto#L68>`

Defines how traffic should be handled by the external processor.



.. _envoy_v3_api_enum_value_extensions.filters.network.ext_proc.v3.ProcessingMode.DataSendMode.STREAMED:


STREAMED
  *(DEFAULT)* ⁣Send the data to the external processor for processing whenever the data is ready.


.. _envoy_v3_api_enum_value_extensions.filters.network.ext_proc.v3.ProcessingMode.DataSendMode.SKIP:


SKIP
  ⁣Skip sending the data to the external processor.



